[WIP][T6268]Made code review changes and refector search method

--- a/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/views/connector_clickup_backend_view.xml
@@ -106,7 +106,7 @@
                             />
                             <field
                                 attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
-                                name="auth_code"
+                                name="auth_code_test"
                             />
                         </group>
                          <group attrs="{'invisible': [('test_mode', '=', False)]}">
