[WIP][T6268]generic method to generate queue job description and export particular task

--- a/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/views/connector_clickup_backend_view.xml
@@ -213,7 +213,7 @@
         <field name="arch" type="xml">
             <tree string="Clickup Backend">
                 <field name="name" />
-                <field name="uri" />
+                <field name="auth_type" />
             </tree>
         </field>
     </record>
