--- a/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/views/connector_clickup_backend_view.xml
@@ -1,211 +1,223 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <!-- Clickup backend model form view  -->
-    <record id="view_clickup_backend_form" model="ir.ui.view">
-        <field name="name">clickup.backend.form</field>
-        <field name="model">clickup.backend</field>
-        <field name="arch" type="xml">
-            <form string="Clickup Backend">
-                <header>
-                    <button
+
+        <!-- Clickup backend model form view  -->
+        <record id="view_clickup_backend_form" model="ir.ui.view">
+            <field name="name">clickup.backend.form</field>
+            <field name="model">clickup.backend</field>
+            <field name="arch" type="xml">
+                <form string="Clickup Backend">
+                    <header>
+                        <button
                         attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                         class="oe_highlight"
+                        help="After providing the client id,client secret and redirect url click this button to generate the Auth code."
                         name="generate_auth_code"
                         string="Generate Oauth Code"
                         type="object"
-                        help="After providing the client id,client secret and redirect url click this button to generate the Auth code."
                     />
-                    <button
+                        <button
                         attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                         class="oe_highlight"
+                        help="After providing the url in Auth Code field click to get the Access Token"
                         name="generate_token"
                         string="Generate Token"
                         type="object"
-                        help="After providing the url in Auth Code field click to get the Access Token"
                     />
-                </header>
-                <sheet>
-                    <div class="oe_button_box" name="button_box">
-                        <button
+                    </header>
+                    <sheet>
+                        <div class="oe_button_box" name="button_box">
+                            <button
                             class="oe_stat_button"
                             icon="fa-play"
                             name="toggle_test_mode"
                             type="object"
                         >
-                            <field invisible="1" name="test_mode" />
-                            <span
+                                <field invisible="1" name="test_mode" />
+                                <span
                                 attrs="{'invisible': [('test_mode', '=', True)]}"
                                 class="o_stat_text text-success"
                             >Production</span>
-                            <span
+                                <span
                                 attrs="{'invisible': [('test_mode', '=', False)]}"
                                 class="o_stat_text text-warning"
                             >Test</span>
-                        </button>
-                    </div>
-                    <widget
+                            </button>
+                        </div>
+                        <widget
                         attrs="{'invisible': [('test_mode', '=', False)]}"
                         bg_color="bg-warning"
                         name="web_ribbon"
                         title="Test Mode"
                     />
-                    <widget
+                        <widget
                         attrs="{'invisible': [('test_mode', '=', True)]}"
                         bg_color="bg-success"
                         name="web_ribbon"
                         title="Production"
                     />
-                    <group>
                         <group>
-                            <field
+                            <group>
+                                <field
                                 name="name"
                                 placeholder="Ex:-Test 1"
                                 style="font-size:13pt;"
                             />
-                            <field name="auth_type" />
-                        </group>
-                        <group attrs="{'invisible': [('test_mode', '=', True)]}">
-                            <field
+                                <field name="auth_type" />
+                            </group>
+                            <group attrs="{'invisible': [('test_mode', '=', True)]}">
+                                <field
                                 attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                                 name="redirect_url"
                             />
-                            <field
+                                <field
                                 attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                                 name="client_id"
                             />
-                            <field
+                                <field
                                 attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                                 name="client_secret"
                                 password="True"
                             />
-                            <field
+                                <field
                                 attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                                 name="auth_code"
                             />
-                        </group>
-                        <group attrs="{'invisible': [('test_mode', '=', True)]}">
-                            <field
-                                name="api_key"
+                            </group>
+                            <group attrs="{'invisible': [('test_mode', '=', True)]}">
+                                <field
                                 attrs="{'readonly': [('auth_type', '=', 'Oauth')]}"
+                                name="api_key"
                             />
-                            <field name="uri" />
-                        </group>
-                        <group attrs="{'invisible': [('test_mode', '=', False)]}">
-                            <field
+                                <field
+                                name="url_path"
+                                placeholder="https://api.clickup.com"
+                            />
+                                <field name="version" />
+                                <field name="uri" />
+                            </group>
+                            <group attrs="{'invisible': [('test_mode', '=', False)]}">
+                                <field
                                 attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                                 name="redirect_url"
                             />
-                            <field
+                                <field
                                 attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                                 name="client_id_test"
                             />
-                            <field
+                                <field
                                 attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                                 name="client_secret_test"
                                 password="True"
                             />
-                            <field
+                                <field
                                 attrs="{'invisible': [('auth_type', '=', 'api_key')]}"
                                 name="auth_code_test"
                             />
-                        </group>
-                         <group attrs="{'invisible': [('test_mode', '=', False)]}">
-                            <field
-                                name="test_token"
+                            </group>
+                            <group attrs="{'invisible': [('test_mode', '=', False)]}">
+                                <field
                                 attrs="{'readonly': [('auth_type', '=', 'Oauth')]}"
+                                name="test_token"
                             />
-                            <field name="test_location" />
+                                <field
+                                name="url_path_test"
+                                placeholder="https://api.clickup.com"
+                            />
+                                <field name="version_test" />
+                                <field name="test_location" />
+                            </group>
                         </group>
-                    </group>
-                    <notebook>
-                        <page string="Basic Information">
-                            <span
+                        <notebook>
+                            <page string="Basic Information">
+                                <span
                             >Please refer the Documentation regarding this module in order to utilize and experience this
                                in best possible way.
                             </span>
-                            <button
+                                <button
                                 class="oe_highlight"
                                 name="redirect_action"
                                 string="Read Me"
                                 type="object"
                             />
-                        </page>
-                        <page string="Import">
-                            <span style="margin-right: 10px;">
-                                <b>Click to Import Projects of ClickUp</b>
-                            </span>
-                            <button
+                            </page>
+                            <page string="Import">
+                                <span style="margin-right: 10px;">
+                                    <b>Click to Import Projects of ClickUp</b>
+                                </span>
+                                <button
                                 class="oe_highlight"
                                 name="import_projects"
                                 string="Import Projects"
                                 type="object"
                             />
-                            <group />
-                            <group />
-                            <br />
-                            <span style="margin-right: 19px; ">
-                                <b>Click to Import Stages of ClickUp</b>
-                            </span>
-                            <button
+                                <group />
+                                <group />
+                                <br />
+                                <span style="margin-right: 19px; ">
+                                    <b>Click to Import Stages of ClickUp</b>
+                                </span>
+                                <button
                                 class="oe_highlight"
                                 name="import_stages"
                                 string="Import Stages"
                                 type="object"
                             />
-                            <group />
-                            <group />
-                            <br />
-                            <span style="margin-right: 27px;">
-                                <b>Click to Import Tasks of ClickUp</b>
-                            </span>
-                            <button
+                                <group />
+                                <group />
+                                <br />
+                                <span style="margin-right: 27px;">
+                                    <b>Click to Import Tasks of ClickUp</b>
+                                </span>
+                                <button
                                 class="oe_highlight"
                                 name="import_tasks"
                                 string="Import Tasks"
                                 type="object"
                             />
-                            <group>
-                                <field name="force_update_tasks" />
-                            </group>
-                            <group />
-                        </page>
-                        <page string="Advance Configuration">
-                            <group>
                                 <group>
-                                    <field name="company_id" />
-                                    <field name="datetime_filter_task" />
-                                    <field name="team_id" />
+                                    <field name="force_update_tasks" />
                                 </group>
-                            </group>
-                        </page>
-                        <page string="Export">
-                            <span style="margin-right: 10px;">
-                                <b>Click to Export Projects In ClickUp remote</b>
-                            </span>
-                            <button
+                                <group />
+                            </page>
+                            <page string="Advance Configuration">
+                                <group>
+                                    <group>
+                                        <field name="company_id" />
+                                        <field name="datetime_filter_task" />
+                                        <field name="team_id" />
+                                    </group>
+                                </group>
+                            </page>
+                            <page string="Export">
+                                <span style="margin-right: 10px;">
+                                    <b>Click to Export Projects In ClickUp remote</b>
+                                </span>
+                                <button
                                 class="oe_highlight"
                                 name="export_projects"
                                 string="Export Projects"
                                 type="object"
                             />
-                            <group />
-                            <br />
-                            <span style="margin-right: 27px;">
-                                <b>Click to Export Tasks In ClickUp remote</b>
-                            </span>
-                            <button
+                                <group />
+                                <br />
+                                <span style="margin-right: 27px;">
+                                    <b>Click to Export Tasks In ClickUp remote</b>
+                                </span>
+                                <button
                                 class="oe_highlight"
                                 name="export_tasks"
                                 string="Export Tasks"
                                 type="object"
                             />
-                            <group />
-                        </page>
-                    </notebook>
-                </sheet>
-            </form>
-        </field>
-    </record>
+                                <group />
+                            </page>
+                        </notebook>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+
     <!-- Clickup backend model tree view -->
     <record id="view_clickup_backend_tree" model="ir.ui.view">
         <field name="name">clickup.backend.tree</field>
