[WIP][T6268]import and export of sub-task

--- a/connector_clickup/views/project_task_view.xml
+++ b/connector_clickup/views/project_task_view.xml
@@ -42,7 +42,10 @@
                 />
 
             </header>
+            <xpath expr="//field[@name='tag_ids']" position="after">
+                <field name="estimated_cost" />
 
+            </xpath>
             <xpath expr="//page[@name='extra_info']" position="after">
 
                 <page
