--- a/connector_clickup/projects_task_checklists/views/checklist_menu.xml
+++ b/connector_clickup/projects_task_checklists/views/checklist_menu.xml
@@ -25,7 +25,7 @@
                         </group>
                         <group>
                             <field name="project_id" />
-                            <field name="task_ids" />
+                            <field name="task_id" />
                         </group>
                     </group>
                     <label for="checklist_ids" string="CheckList Items" />
@@ -68,7 +68,7 @@
                     <group>
                         <group>
                             <field name="name" />
-                            <field name="item_id" />
+                            <field name="checklist_item" />
                             <field name="parent_checklist" />
                         </group>
                     </group>
