[WIP][T6268]Used child mapper for task_checklist and checklist_item

--- a/connector_clickup/connector_clickup/views/connector_clickup_backend_view.xml
+++ b/connector_clickup/connector_clickup/views/connector_clickup_backend_view.xml
@@ -199,6 +199,18 @@
                                 type="object"
                             />
                                 <group />
+
+                                <br />
+                                <span style="margin-right: 27px;">
+                                    <b>Click to Export Checklists In ClickUp remote</b>
+                                </span>
+                                <button
+                                class="oe_highlight"
+                                name="export_checklists"
+                                string="Export Checklists"
+                                type="object"
+                            />
+                                <group />
                             </page>
                              <page string="Advance Configuration">
                                 <group>
