--- a/connector_clickup/projects_task_checklists/views/checklist_menu_views.xml
+++ b/connector_clickup/projects_task_checklists/views/checklist_menu_views.xml
@@ -84,8 +84,8 @@
                     <group>
                         <group>
                             <field name="name" />
-                            <field name="checklist_item" />
                             <field name="parent_checklist" />
+                            <field name="checklist_id" invisible="1" />
                         </group>
                     </group>
                 </sheet>
