--- a/connector_clickup/connector_clickup/views/res_company_view.xml
+++ b/connector_clickup/connector_clickup/views/res_company_view.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-
+    <!-- Inherited res.company form view  -->
     <data>
         <record id="view_company_form_inherit" model="ir.ui.view">
             <field name="name">res.company.inherit.form</field>
