--- a/connector_clickup/connector_clickup/views/res_config_settings_view.xml
+++ b/connector_clickup/connector_clickup/views/res_config_settings_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
+    <!-- Inherited res.config.settings form view  -->
     <data>
         <record id="res_config_settings_view_form_inherit_clickup" model="ir.ui.view">
             <field name="name">res.config.settings.view.form.clickup</field>
